Se agrega funcionalidad para ganar en el juego (solo para la persona)

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Gato</title>
+    <title>Tick Tack Toe</title>
 </head>
 <body>
     <header>
-        <h1>Tic Tac Toe</h1>
+        <h1>Tick Tack Toe</h1>
     </header>
 
     <div class="score-board">
@@ -43,7 +43,7 @@
     </div>
 
     <p id="action-messege">Make your move</p>
-    <button onclick="restartGame()" class="button-click">Restart</button>
+    <button onclick="startGame()" class="button-click">Restart</button>
 
     <script src="app.js" charset="utf-8"></script>
 </body>
